Menu z-index correction

--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ h1 {
 	background-color: #ffffff;
  	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
 
- 	z-index: 1;
+ 	z-index: 1000;
 
  	position: fixed;
  	top: 0;
